# obs-mdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mdkvideo.cpp  plugin.c
cmake/: legacy.cmake
data/locale/: en-US.ini  zh-CN.ini
